[metadata]
name = ventTools
version = 0.05
author = Villiam and gang
author_email = vjacob19@student.aau.dk
url = https://github.com/Villiamfj/ventTools
description = Tools for using ventMode and ventMap
long_description = file: README.md
keywords = vent
license = MIT
classifiers =
    License :: MIT
    Programming Language :: Python :: 3


